--- a/index.html
+++ b/index.html
@@ -154,29 +154,37 @@
                 <article>
                         <ul class="icon-list">
                     <li>
-                        <div class="icon-bg" > 
-                            <img src="img/html5.png" alt="html5 마크">
+                        <div class="icon-bg" >
+                            <div class="icon-space"> 
+                                <img src="img/html5.png" alt="html5 마크">
+                            </div>    
                         </div>
                         <p class="icon-title">html5</p>
                         <p>전반적인 태그의 종류를 알며 웹접근성과 웹표준에 적합한 구조를 만들 수 있습니다.</p>
                     </li>
                     <li>
                         <div class="icon-bg">
-                            <img src="img/css3.png" alt="css3 마크">
+                            <div class="icon-space">
+                                <img src="img/css3.png" alt="css3 마크">
+                            </div>    
                         </div>
                         <p class="icon-title">css3</p>
                         <p>전반적인 css와 속성을 알며 이를 홈페이지 제작에 잘 활용할 수 있습니다. </p>
                     </li>
                     <li>
                         <div class="icon-bg">
-                            <img src="img/js.png" alt="자바스크립트 마크">
+                            <div class="icon-space">
+                                <img src="img/js.png" alt="자바스크립트 마크">
+                            </div>    
                         </div>
                         <p class="icon-title">제이쿼리,자바스크립트</p>
                         <p>자바스크립트와 제이쿼리의 기본 내용을 알고 활용할 수 있습니다.</p>
                     </li>
                     <li>
                         <div class="icon-bg">
-                            <img src="img/svn.png" alt="svn 마크">
+                            <div class="icon-space">
+                                <img src="img/svn.png" alt="svn 마크">
+                            </div>
                         </div>
                         <p class="icon-title">SVN</p>
                         <p>SVN을 이용하여 형상관리를 할 수 있습니다.</p>
@@ -184,7 +192,9 @@
                 </li>
                 <li>
                     <div class="icon-bg">
-                        <img src="img/github.png" alt="svn 마크">
+                        <div class="icon-space">
+                            <img src="img/github.png" alt="svn 마크">
+                        </div>    
                     </div>
                     <p class="icon-title">GIT/GITHUB</p>
                     <p>깃과 깃허브를 현재 익히고 있습니다.</p>
