--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </nav>
         </header>
         <main id="main-wrap">
-            <section id="visual-wrap">
+            <section id="visual-wrap" class="realm">
             	<div class="greeting-list">
                     <p>H</p>
                     <p>He</p>
@@ -114,7 +114,7 @@
                     <img src="img/mouse_wheel.png" alt="마우스휠 이미지">
                 </p>
             </section>
-            <section id="profile-wrap">
+            <section id="profile-wrap" class="realm">
                <article>
                         <div class="profile-img">
                             <img src="img/profile-img.jpg" alt="프로필 사진">
@@ -132,25 +132,9 @@
                                     <p>2019년 더조은 아카데미
                                     자바스크립트 과정 수료</p>
                                     <p>2020년 html/css,포토샵,일러스트레이터,포트폴리오 과정 수료</p>
-                                </li>
-                                <li>
-                                   <p class="profile-title">장점</p>
-                                    <p class="content-title">oveflow:hidden이 보이는 남자</p>
-                                    <p>
-                                        작업도중 어떠한 문제가 생기면, 그 문제의 원인과 해결방안이 생길 때까지 몰입합니다. 학원에서도 포트폴리오 제작할 때였습니다. 마우스를 오버하거나 탭키를 누를 시 숨겨져있던 div박스가 투명도 0에서 50이되어 위로 올라우는 메뉴를 만들고 있었는데, tab키를 누르면 div가 올라오지 않고, 그 밑에 이미지가 올라가는 현상이 생겼습니다. 선생님에게 여쭤보였지만 문제가 풀리지 않아서 코딩을 새롭게 짜서 만들었는데 똑같은 문제가 발생했습니다. 그래서 렌더링으로 결과를 비교하면서 css를 되짚어보았는데 overflow : hidden을 쓴 것이 문제였었습니다. 그래서 div가 숨겨져있을때 높이를 좀더 올리는 걸로 문제를 해결했었습니다.
-                                    </p>
-                                    <p class="profile-title">단점</p>
-                                    <p class="content-title">validator 같은 남자</p>    
-                                    <p>
-                                        생각이 많은 단점이 있습니다. 효율적인 방법을 찾으려 여러 생각을 해서 심사숙고하는 경우가 있습니다. 이는 합리적인 방법을 찾거나 다양한 사고를 필요로 하는 일에는 원동력이 되어 완성도를 높이는데 많은 이바지를 하지만, 속도가 느려지는 때도 있어서 급하게 프로젝트를 진행하거나 결정을 내려야 하는 상황에서는 약점이 될 수 있습니다. 그래서 데드라인을 정해서 빨리 결론을 내려 추진력 있게 밀고 나가도록 하겠습니다.
-                                    </p>
-                                    
-                                </li>
-                            </ul>
-                        </div>
-                    </article>
+                                </li>                        
             </section>
-            <section id="icon-wrap">
+            <section id="icon-wrap" class="realm">
                 <article>
                     <ul class="icon-list">
                         <li>
@@ -207,7 +191,7 @@
                 </ul>
                 </article>
             </section>
-            <section id="web-wrap">
+            <section id="web-wrap" class="realm">
                 <ul class="web-list">
                     <li class="web-on">
                          <a href="#" target="_blank">
@@ -728,7 +712,7 @@
                 </ul>
             </section>
         </main>
-        <footer id="footer-wrap">
+        <footer id="footer-wrap" class="realm">
            <ul class="contact-list">
                 <li>
                     <p>
