--- a/toast/index.html
+++ b/toast/index.html
@@ -9,8 +9,7 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/placeholders.min.js"></script>
     <script src="js/toast.js"></script>
-    <link href="https://unpkg.com/video.js/dist/video-js.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
+
        <!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
 			<style type="text/css">
@@ -387,8 +386,7 @@
            </section>
             <section class="brand-wrap">
                 <h2 class="brand-text-title">브랜드 스토리 페이지 바로가기</h2>
-                <video autoplay muted loop id="vid1" class="video-js vjs-big-play-button vjs-big-play-centered"
-                data-setup='{"controls": true, "fluid": true, "autoplay": false, "muted": true, "playbackRates": [0.5, 1, 1.5, 2]}'>
+                <video autoplay muted loop>
                       <source src="video/md.mp4" type="video/mp4">
                       <source src="video/md.webm" type="video/webm">
                       <source src="video/md.ogg" type="video/ogg">
@@ -397,6 +395,9 @@
                         <param name="allowFullScreen" value="true" />
                         <param name="wmode" value="transparent" />
                       </object>
+                      <!--[if lte ie 8]>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/U1ZxxXoKClc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <![endif]-->
                 </video>
                <article class="brand-con">
                    <div class="brand-text">
